2010-01-25  Philippe Normand  <pnormand@igalia.com>

Reviewed by Eric Seidel.

        autobuffer value not forwarded media element to MediaPlayer
        https://bugs.webkit.org/show_bug.cgi?id=33889

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::loadResource): Forward autobuffer
        value to MediaPlayer instance.
        * platform/graphics/MediaPlayer.cpp:
        (WebCore::MediaPlayer::load): Forward autobuffer and
        preservesPitch values to newly created platform media player instance.

Canonical link: https://commits.webkit.org/45293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53910 268f45cc-cd09-0410-ab3c-d52691b4dbfc